--- a/package.json
+++ b/package.json
@@ -10,8 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "accordion-collapse-react-native": "^1.1.1",
+    "axios": "^1.6.8",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-collapsible": "^1.6.1",
+    "react-native-element-dropdown": "^2.10.4",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.1.0",
+    "react-native-switch": "^1.5.1",
+    "react-native-vector-icons": "^10.0.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
